# lazycode-base

./: LICENSE  README.md  setup.cfg  setup.py
lazycode/: __init__.py  nix.py  pyfunctions.py  shell.py
