[metadata]
name = lazycode
version = 0.0.1
author = David H Isakson II
author_email = david.isakson.ii@gmail.com
description = Coding short cuts for python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ikeman32/lazycode-base
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = False